# bazel-grpc-py-example

./: .bazelrc  BUILD  MODULE.bazel  README.md  server.py
front_end/: BUILD.bazel  package-lock.json
